--- a/srcs/nginx/conf/nginx.conf
+++ b/srcs/nginx/conf/nginx.conf
@@ -26,6 +26,11 @@ http {
             try_files $uri $uri/ /index.php?$args;
         }
 
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|otf)$ {
+            expires max;
+            log_not_found off;
+        }
+
         location ~ \.php$ {
             include snippets/fastcgi-php.conf;
             fastcgi_pass wordpress:9000;
